section 6- done + fixes on mobile

--- a/Home_page/home-section1&3.css
+++ b/Home_page/home-section1&3.css
@@ -205,11 +205,7 @@ main {
 }
 
 
-#jewellery_types_5-grid {
-    height: 50vh;
-    background-color: var(--color-background2);
 
-}
 
 #our_brand_6-grid {
     height: 50vh;
