--- a/Home_page/home-section5.css
+++ b/Home_page/home-section5.css
@@ -48,6 +48,7 @@
     position: relative;
     background-repeat: round;
     margin-bottom: -2rem;
+    transition: all 0.2s;
  }
 
  .hover_category {
@@ -56,6 +57,7 @@
     margin-left: auto;
     font-weight: 600;
     border-bottom: 2px solid var(--color-button);
+    transition: all 0.2s;
 }
 
 @media (max-width: 500px) {
@@ -89,5 +91,6 @@
 
     .p-category {
         font-size: 3rem;
+        padding-bottom: 4rem;
     }
 }
